<resources>
    <string name="app_name">Character Sheet Manager</string>

    //CharacterList Activity strings
    <string name="characterList" />
    <string name="addCharacterButton">Add Character</string>

    //Character name and level strings
    <string name="characterName">Enter character name</string>
    <string name="level">1</string>
    <string name="nextButton">Next</string>

    //Spinner strings
    <string name="spinnerRace">Race</string>
    <string name="spinnerSubRace">Sub-race</string>
    <string name="spinnerClass">Class</string>
    <string name="spinnerArchetype">Archetype</string>
    <string name="spinnerBackground">Background</string>

    //Experience and Proficiency bonus
    <string name="experience">Experience Points</string>
    <string name="proficiency">Proficiency Bonus</string>
    <string name="textProficiency">+ 1</string>

    <string name="textName">Character Name</string>
    <string name="textLevel">Level</string>
    <string name="textClass">Class</string>
    <string name="textArchetype">Archetype</string>
    <string name="textRace">Race</string>
    <string name="textSubRace">Subrace</string>
    <string name="textBackground">Background</string>
    <string name="editTextExp">0</string>

    //Display Statistics strings
    <string name="textStrength">Strength</string>
    <string name="textDexterity">Dexterity</string>
    <string name="textConstitution">Constitution</string>
    <string name="textIntelligence">Intelligence</string>
    <string name="textWisdom">Wisdom</string>
    <string name="textCharisma">Charisma</string>

    <string name="textStrengthMod" />
    <string name="textDexterityMod" />
    <string name="textConstitutionMod" />
    <string name="textIntelligenceMod" />
    <string name="textWisdomMod" />
    <string name="textCharismaMod" />

    //Input Statistics strings
    <string name="inputStrength">10</string>
    <string name="inputDexterity">10</string>
    <string name="inputConstitution">10</string>
    <string name="inputIntelligence">10</string>
    <string name="inputWisdom">10</string>
    <string name="inputCharisma">10</string>

    //Message before skills
    <string name="skills_message" />

    //Skill proficiency checkboxes
    <string name="checkbox_Acrobatics">Acrobatics</string>
    <string name="checkbox_Animal_Handling">Animal Handling</string>
    <string name="checkbox_Arcana">Arcana</string>
    <string name="checkbox_Athletics">Athletics</string>
    <string name="checkbox_Deception">Deception</string>
    <string name="checkbox_History">History</string>
    <string name="checkbox_Insight">Insight</string>
    <string name="checkbox_Intimidation">Intimidation</string>
    <string name="checkbox_Investigation">Investigation</string>
    <string name="checkbox_Medicine">Medicine</string>
    <string name="checkbox_Nature">Nature</string>
    <string name="checkbox_Perception">Perception</string>
    <string name="checkbox_Performance">Performance</string>
    <string name="checkbox_Persuasion">Persuasion</string>
    <string name="checkbox_Religion">Religion</string>
    <string name="checkbox_Sleight_of_Hand">Sleight of Hand</string>
    <string name="checkbox_Stealth">Stealth</string>
    <string name="checkbox_Survival">Survival</string>

    //Saving Throw checkboxes
    <string name="checkbox_Str_Save">Strength</string>
    <string name="checkbox_Dex_Save">Dexterity</string>
    <string name="checkbox_Con_Save">Constitution</string>
    <string name="checkbox_Int_Save">Intelligence</string>
    <string name="checkbox_Wis_Save">Wisdom</string>
    <string name="checkbox_Cha_Save">Charisma</string>

    //Weapon and Armor Radio Buttons
    <string name="radio_Simple_Weapon">Simple Weapons</string>
    <string name="radio_Martial_Weapon">Martial Weapons</string>
    <string name="radio_Other_Weapon">Other Weapons</string>
    <string name="radio_Light_Armor">Light Armor</string>
    <string name="radio_Medium_Armor">Medium Armor</string>
    <string name="radio_Heavy_Armor">Heavy Armor</string>
    <string name="radio_Shield">Shields</string>
    <string name="editText_Other_weapons" />

    <string name="btnSave">Save</string>

</resources>