<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/border" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Skill Proficiencies"
                android:textColor="#6386bf"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:stretchColumns="*" >

                <TableRow>
                    <CheckBox
                        android:id="@+id/checkbox_Acrobatics"
                        android:text="@string/checkbox_Acrobatics" />

                    <CheckBox
                        android:id="@+id/checkbox_Animal_Handling"
                        android:text="@string/checkbox_Animal_Handling" />
                </TableRow>

                <TableRow>
                    <CheckBox
                        android:id="@+id/checkbox_Arcana"
                        android:text="@string/checkbox_Arcana"/>

                    <CheckBox
                        android:id="@+id/checkbox_Athletics"
                        android:text="@string/checkbox_Athletics"/>
                </TableRow>

                <TableRow>
                    <CheckBox
                        android:id="@+id/checkbox_Deception"
                        android:text="@string/checkbox_Deception"/>

                    <CheckBox
                        android:id="@+id/checkbox_History"
                        android:text="@string/checkbox_History"/>
                </TableRow>

                <TableRow>
                    <CheckBox
                        android:id="@+id/checkbox_Insight"
                        android:text="@string/checkbox_Insight"/>

                    <CheckBox
                        android:id="@+id/checkbox_Intimidation"
                        android:text="@string/checkbox_Intimidation"/>
                </TableRow>

                <TableRow>
                    <CheckBox
                        android:id="@+id/checkbox_Investigation"
                        android:text="@string/checkbox_Investigation"/>

                    <CheckBox
                        android:id="@+id/checkbox_Medicine"
                        android:text="@string/checkbox_Medicine"/>
                </TableRow>

                <TableRow>
                    <CheckBox
                        android:id="@+id/checkbox_Nature"
                        android:text="@string/checkbox_Nature"/>

                    <CheckBox
                        android:id="@+id/checkbox_Perception"
                        android:text="@string/checkbox_Perception"/>
                </TableRow>

                <TableRow>
                    <CheckBox
                        android:id="@+id/checkbox_Performance"
                        android:text="@string/checkbox_Performance"/>

                    <CheckBox
                        android:id="@+id/checkbox_Persuasion"
                        android:text="@string/checkbox_Persuasion"/>
                </TableRow>

                <TableRow>
                    <CheckBox
                        android:id="@+id/checkbox_Religion"
                        android:text="@string/checkbox_Religion"/>

                    <CheckBox
                        android:id="@+id/checkbox_Sleight_of_Hand"
                        android:text="@string/checkbox_Sleight_of_Hand"/>
                </TableRow>

                <TableRow>
                    <CheckBox
                        android:id="@+id/checkbox_Stealth"
                        android:text="@string/checkbox_Stealth"/>

                    <CheckBox
                        android:id="@+id/checkbox_Survival"
                        android:text="@string/checkbox_Survival"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>

        <Button
            android:id="@+id/nextButton"
            android:text="@string/nextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"/>

    </LinearLayout>
</ScrollView>