<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/border" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Skill Proficiencies"
                android:textColor="#6386bf"
                android:textSize="16sp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/skills_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"/>

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:stretchColumns="*" >

                <TableRow>
                    <CheckBox
                        android:id="@+id/checkbox_Acrobatics"
                        android:text="@string/checkbox_Acrobatics" />

                    <CheckBox
                        android:id="@+id/checkbox_Animal_Handling"
                        android:text="@string/checkbox_Animal_Handling" />
                </TableRow>

                <TableRow>
                    <CheckBox
                        android:id="@+id/checkbox_Arcana"
                        android:text="@string/checkbox_Arcana"/>

                    <CheckBox
                        android:id="@+id/checkbox_Athletics"
                        android:text="@string/checkbox_Athletics"/>
                </TableRow>

                <TableRow>
                    <CheckBox
                        android:id="@+id/checkbox_Deception"
                        android:text="@string/checkbox_Deception"/>

                    <CheckBox
                        android:id="@+id/checkbox_History"
                        android:text="@string/checkbox_History"/>
                </TableRow>

                <TableRow>
                    <CheckBox
                        android:id="@+id/checkbox_Insight"
                        android:text="@string/checkbox_Insight"/>

                    <CheckBox
                        android:id="@+id/checkbox_Intimidation"
                        android:text="@string/checkbox_Intimidation"/>
                </TableRow>

                <TableRow>
                    <CheckBox
                        android:id="@+id/checkbox_Investigation"
                        android:text="@string/checkbox_Investigation"/>

                    <CheckBox
                        android:id="@+id/checkbox_Medicine"
                        android:text="@string/checkbox_Medicine"/>
                </TableRow>

                <TableRow>
                    <CheckBox
                        android:id="@+id/checkbox_Nature"
                        android:text="@string/checkbox_Nature"/>

                    <CheckBox
                        android:id="@+id/checkbox_Perception"
                        android:text="@string/checkbox_Perception"/>
                </TableRow>

                <TableRow>
                    <CheckBox
                        android:id="@+id/checkbox_Performance"
                        android:text="@string/checkbox_Performance"/>

                    <CheckBox
                        android:id="@+id/checkbox_Persuasion"
                        android:text="@string/checkbox_Persuasion"/>
                </TableRow>

                <TableRow>
                    <CheckBox
                        android:id="@+id/checkbox_Religion"
                        android:text="@string/checkbox_Religion"/>

                    <CheckBox
                        android:id="@+id/checkbox_Sleight_of_Hand"
                        android:text="@string/checkbox_Sleight_of_Hand"/>
                </TableRow>

                <TableRow>
                    <CheckBox
                        android:id="@+id/checkbox_Stealth"
                        android:text="@string/checkbox_Stealth"/>

                    <CheckBox
                        android:id="@+id/checkbox_Survival"
                        android:text="@string/checkbox_Survival"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:background="@drawable/border" >

            <TextView
                android:text="Saving Throws"
                android:textColor="#6386bf"
                android:textSize="16sp"
                android:textAlignment="center"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="*">

                <TableRow>
                    <CheckBox
                        android:id="@+id/checkbox_Str_Save"
                        android:text="@string/checkbox_Str_Save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <CheckBox
                        android:id="@+id/checkbox_Int_Save"
                        android:text="@string/checkbox_Int_Save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </TableRow>

                <TableRow>
                    <CheckBox
                        android:id="@+id/checkbox_Dex_Save"
                        android:text="@string/checkbox_Dex_Save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <CheckBox
                        android:id="@+id/checkbox_Wis_Save"
                        android:text="@string/checkbox_Wis_Save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>

                <TableRow>
                    <CheckBox
                        android:id="@+id/checkbox_Con_Save"
                        android:text="@string/checkbox_Con_Save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <CheckBox
                        android:id="@+id/checkbox_Cha_Save"
                        android:text="@string/checkbox_Cha_Save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>
            </TableLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:background="@drawable/border">

            <TextView
                android:text="Weapon and Armor Proficiencies"
                android:textColor="#6386bf"
                android:textSize="16sp"
                android:textAlignment="center"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*">

                <TableRow>
                    <RadioButton
                        android:id="@+id/radio_Light_Armor"
                        android:text="@string/radio_Light_Armor"/>

                    <RadioButton
                        android:id="@+id/radio_Simple_Weapon"
                        android:text="@string/radio_Simple_Weapon"/>
                </TableRow>

                <TableRow>
                    <RadioButton
                        android:id="@+id/radio_Medium_Armor"
                        android:text="@string/radio_Medium_Armor"/>

                    <RadioButton
                        android:id="@+id/radio_Martial_Weapon"
                        android:text="@string/radio_Martial_Weapon"/>
                </TableRow>

                <TableRow>
                    <RadioButton
                        android:id="@+id/radio_Heavy_Armor"
                        android:text="@string/radio_Heavy_Armor"/>

                    <RadioButton
                        android:id="@+id/radio_Other_Weapon"
                        android:text="@string/radio_Other_Weapon"/>
                </TableRow>

                <TableRow>
                    <RadioButton
                        android:id="@+id/radio_Shield"
                        android:text="@string/radio_Shield"/>
                </TableRow>

                <TextView
                    android:id="@+id/textView_Other_weapons"
                     android:textAlignment="center"
                    android:layout_marginTop="5dp"
                    android:visibility="gone" />

            </TableLayout>

        </LinearLayout>

        <Button
            android:id="@+id/nextButton"
            android:text="@string/nextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

    </LinearLayout>
</ScrollView>